2017-11-02  Bruno Haible  <bruno@clisp.org>

	Support building with 'gmake' instead of 'make'.
	* configure (MAKE): New variable. Use it instead of hardcoding 'make'.
	* Makefile.devel (MAKE): Remove variable. All common 'make' programs
	set MAKE to a reasonable value (the value of the environment variable
	'MAKE' or the name of the current program) by default.

2017-11-02  Bruno Haible  <bruno@clisp.org>

	Avoid error on IRIX when stdout is a pipe (regression from 2016-11-11).
	* stream.d (IS_EINVAL_EXTRA): Handle IRIX.
	(finish_tty_output): Use IS_EINVAL instead of testing only for EINVAL.

2017-11-02  Bruno Haible  <bruno@clisp.org>

	Skip a test that would request more space than available.
	* tests/lists153.tst: Disable huge allocation tests on 32-bit platforms
	with TYPECODES.

2017-11-02  Bruno Haible  <bruno@clisp.org>

	Fix a build failure with SINGLEMAP_MEMORY (regression from 2017-11-01).
	Reported by Don Cohen.
	* lispbibl.d (oint_addr_mask): Fix big mistake in expression.

2017-11-01  Bruno Haible  <bruno@clisp.org>

	Work around HP-UX cc crash.
	* makemake.in (XCFLAGS): Remove '-g' if we are using HP-UX cc.

2017-11-01  Bruno Haible  <bruno@clisp.org>

	Fix build failure when oint_type_shift has an unusual value.
	* lispbibl.d (mtypecode): Define a fallback when no optimized definition
	is possible.

2017-11-01  Bruno Haible  <bruno@clisp.org>

	Fix small problem in 2017-10-28 change.
	* lispbibl.d (oint_addr_mask): Make sure evaluation in preprocessor
	directives produces the right value.

2017-10-31  Bruno Haible  <bruno@clisp.org>

	Apply TRIVIALMAP's memory allocation also to the STACK area.
	* lispbibl.d (TRIVIALMAP_MEMORY_STACK): New macro. When it is defined,
	don't check oint_addr_mask against MALLOC_ADDRESS_RANGE.
	* spvw.d (init_memory) [TRIVIALMAP_MEMORY_STACK]: Allocate the stack
	range in [MAPPABLE_ADDRESS_RANGE_START, MAPPABLE_ADDRESS_RANGE_END],
	rather than through mymalloc.

2017-10-30  Bruno Haible  <bruno@clisp.org>
